app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
  --brand-primary: #be5100;
  --brand-secondary: #ff8c42;
  --brand-tertiary: #FFF5F8;

}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-brand-primary: var(--brand-primary);
  --color-brand-secondary: var(--brand-secondary);
  --font-sans: var(--font-poppins);
  --color-brand-tertiary: var(--brand-tertiary);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #FFFAFA;
    --foreground: #222222;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
}

html {
  scroll-behavior: smooth;
  font-size: 16px;
}

